Jenkins build error fix test2

--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2051,7 +2051,6 @@ then {11,99 TRY/Month}*/
 "foryou_no_photopick_warn" = "";
 "foryou_no_story_warn" = "";
 "foryou_try_photopick" = "";
-"ksaldalks" = "";
 "foryou_see_all" = "";
 
 /*Facelift*/
@@ -2059,3 +2058,6 @@ then {11,99 TRY/Month}*/
 "tabbar_discover" = "";
 "change_pass_mail_or_phone" = "";
 "mystorage_become_premium" = "";
+"we_are_creating_your_story_title" = "";
+"we_are_creating_your_story_desc" = "";
+"ksaldalks" = "";
