--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2103,7 +2103,6 @@ then {11,99 TRY/Month}*/
 /*Fuzzy*/
 "foryou_no_story_warn" = "No active stories currently.";
 "foryou_try_photopick" = "Try PhotoPick";
-"ksaldalks" = "";
 "foryou_see_all" = "";
 
 /*Facelift*/
@@ -2111,3 +2110,6 @@ then {11,99 TRY/Month}*/
 "tabbar_discover" = "Discover";
 "change_pass_mail_or_phone" = "";
 "mystorage_become_premium" = "";
+"we_are_creating_your_story_title" = "We are preparing your story.";
+"we_are_creating_your_story_desc" = "Once it is done, you can access it from Videos Album.";
+"ksaldalks" = "";
