--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2114,7 +2114,7 @@ then {11,99 TRY/Month}*/
 "we_are_creating_your_story_desc" = "Once it is done, you can access it from Videos Album.";
 "trash_bin" = "Trash Bin";
 "ksaldalks" = "";
-"empty_gallery_no_photo" = "";
-"empty_gallery_no_video" = "";
+"empty_gallery_no_photo" = "You don’t have any photos or videos in your lifebox yet.";
+"empty_gallery_no_video" = "You don’t have any videos in your lifebox yet.";
 "empty_gallery_no_sync" = "";
 "empty_gallery_no_unsync" = "";
