--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2334,28 +2334,28 @@ then {11,99 TRY/Month}*/
 "paycell_share_message" = "J'ai rejoint le Programme d'Ambassadeur de Marque lifebox. Vous pouvez avoir le forfait Premium lifebox spécifique au programme de 6 mois de 250 Go à prix réduit, en cliquant sur le lien ci-dessous. Ne le manquez pas 😊";
 "beeline_cancel_TC" = "Vous pouvez annuler ou gérer votre abonnement à lifebox depuis l'application  Beeline.";
 "paycell_share_message " = "";
-"foryou_throwback" = "";
-"foryou_myalbums" = "";
-"foryou_myanimations" = "";
-"foryou_collages" = "";
-"foryou_my_collages" = "";
-"foryou_animations" = "";
-"foryou_no_album_warn" = "";
-"foryou_no_photopick_warn" = "";
-"foryou_no_story_warn" = "";
-"foryou_try_photopick" = "";
-"foryou_see_all" = "";
+"foryou_throwback" = "Souvenirs";
+"foryou_myalbums" = "Mes Albums";
+"foryou_myanimations" = "Mes Animations";
+"foryou_collages" = "Collages";
+"foryou_my_collages" = "Mes Collages";
+"foryou_animations" = "Animations";
+"foryou_no_album_warn" = "Vous n'avez pas encore créé d'album.";
+"foryou_no_photopick_warn" = "Vous n'avez pas encore utilisé PhotoPick.";
+"foryou_no_story_warn" = "Il n'y a actuellement aucune histoire active.";
+"foryou_try_photopick" = "Essayez Photo Pick";
+"foryou_see_all" = "Voir tout";
 
 /*Facelift*/
-"tabbar_foryou" = "";
-"tabbar_discover" = "";
+"tabbar_foryou" = "Pour Toi";
+"tabbar_discover" = "Découvrir";
 "change_pass_mail_or_phone" = "";
 "mystorage_become_premium" = "";
-"we_are_creating_your_story_title" = "";
-"we_are_creating_your_story_desc" = "";
-"trash_bin" = "";
+"we_are_creating_your_story_title" = "Nous préparons votre histoire.";
+"we_are_creating_your_story_desc" = "Lorsqu'il est prêt, vous pouvez y accéder à partir de l'album Vidéos.";
+"trash_bin" = "Corbeille";
 "ksaldalks" = "";
-"empty_gallery_no_photo" = "";
+"empty_gallery_no_photo" = "Vous n'avez pas encore de photos";
 "empty_gallery_no_video" = "";
 "empty_gallery_no_sync" = "";
 "empty_gallery_no_unsync" = "";
