--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2043,28 +2043,28 @@ then {11,99 TRY/Month}*/
 "paycell_share_message" = "Я присоединился к Программе Амбассадоров Бренда lifebox. Вы можете получить 6-месячный Премиум-пакет lifebox объемом 250 ГБ по сниженной цене, перейдя по ссылке ниже. Не упустите возможность 😊";
 "beeline_cancel_TC" = "Вы можете отменить или управлять своей подпиской lifebox из приложения Beeline.";
 "paycell_share_message " = "";
-"foryou_throwback" = "";
-"foryou_myalbums" = "";
-"foryou_myanimations" = "";
-"foryou_collages" = "";
-"foryou_my_collages" = "";
-"foryou_animations" = "";
-"foryou_no_album_warn" = "";
-"foryou_no_photopick_warn" = "";
-"foryou_no_story_warn" = "";
-"foryou_try_photopick" = "";
-"foryou_see_all" = "";
+"foryou_throwback" = "Воспоминания";
+"foryou_myalbums" = "Мои Альбомы";
+"foryou_myanimations" = "Моя Анимация";
+"foryou_collages" = "Коллажи";
+"foryou_my_collages" = "Мои Коллажи";
+"foryou_animations" = "Анимации";
+"foryou_no_album_warn" = "Вы еще не создали альбом.";
+"foryou_no_photopick_warn" = "Вы еще не использовали PhotoPick.";
+"foryou_no_story_warn" = "В настоящее время нет активных историй.";
+"foryou_try_photopick" = "Попробуйте PhotoPick";
+"foryou_see_all" = "Просмотреть Все";
 
 /*Facelift*/
-"tabbar_foryou" = "";
-"tabbar_discover" = "";
+"tabbar_foryou" = "Для Тебя";
+"tabbar_discover" = "Откройте для себя";
 "change_pass_mail_or_phone" = "";
 "mystorage_become_premium" = "";
-"we_are_creating_your_story_title" = "";
-"we_are_creating_your_story_desc" = "";
-"trash_bin" = "";
+"we_are_creating_your_story_title" = "Мы готовим вашу историю.";
+"we_are_creating_your_story_desc" = "Когда будет готово, то вы сможете получить доступ из альбома Видео.";
+"trash_bin" = "Корзина";
 "ksaldalks" = "";
-"empty_gallery_no_photo" = "";
+"empty_gallery_no_photo" = "У вас пока нет фотографий.";
 "empty_gallery_no_video" = "";
 "empty_gallery_no_sync" = "";
 "empty_gallery_no_unsync" = "";
