--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2029,28 +2029,28 @@ then {11,99 TRY/Month}*/
 "paycell_share_message" = "Ich bin dem lifebox Brand Ambassador Program beigetreten. Sie können das programmspezifische lifebox 6-Monats-250-GB Premium-Paket zu einem ermäßigten Preis erwerben, indem Sie auf den folgenden Link klicken. Verpassen Sie es nicht 😊";
 "beeline_cancel_TC" = "Sie können Ihr Abonnement von lifebox über die Beeline-App kündigen oder verwalten.";
 "paycell_share_message " = "";
-"foryou_throwback" = "";
-"foryou_myalbums" = "";
-"foryou_myanimations" = "";
-"foryou_collages" = "";
-"foryou_my_collages" = "";
-"foryou_animations" = "";
-"foryou_no_album_warn" = "";
-"foryou_no_photopick_warn" = "";
-"foryou_no_story_warn" = "";
-"foryou_try_photopick" = "";
-"foryou_see_all" = "";
+"foryou_throwback" = "Rückblick";
+"foryou_myalbums" = "Meine Alben";
+"foryou_myanimations" = "Meine Animationen";
+"foryou_collages" = "Collagen";
+"foryou_my_collages" = "Meine Collagen";
+"foryou_animations" = "Animationen";
+"foryou_no_album_warn" = "Sie haben noch kein Album erstellt.";
+"foryou_no_photopick_warn" = "Sie haben PhotoPick noch nicht verwendet.";
+"foryou_no_story_warn" = "Derzeit keine aktiven Geschichten.";
+"foryou_try_photopick" = "Versuchen Sie PhotoPick";
+"foryou_see_all" = "Alles Sehen";
 
 /*Facelift*/
-"tabbar_foryou" = "";
-"tabbar_discover" = "";
+"tabbar_foryou" = "Für Dich";
+"tabbar_discover" = "Entdecken";
 "change_pass_mail_or_phone" = "";
 "mystorage_become_premium" = "";
-"we_are_creating_your_story_title" = "";
-"we_are_creating_your_story_desc" = "";
-"trash_bin" = "";
+"we_are_creating_your_story_title" = "Wir bereiten deine Story vor.";
+"we_are_creating_your_story_desc" = "Wenn es fertig ist, können Sie über das Album Videos darauf zugreifen.";
+"trash_bin" = "Mülleimer";
 "ksaldalks" = "";
-"empty_gallery_no_photo" = "";
+"empty_gallery_no_photo" = "Du hast noch keine Fotos";
 "empty_gallery_no_video" = "";
 "empty_gallery_no_sync" = "";
 "empty_gallery_no_unsync" = "";
