--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2031,28 +2031,28 @@ then {11,99 TRY/Month}*/
 "paycell_share_message" = "Я приєднався до Програми Амбасадорів Бренда lifebox. Ви можете отримати 6-місячний Преміум пакет lifebox об'ємом 250 ГБ за зниженою ціною, перейшовши за посиланням нижче. Не проґавте можливість 😊";
 "beeline_cancel_TC" = "Ви можете скасувати або керувати підпискою lifebox із програми Beeline.";
 "paycell_share_message " = "";
-"foryou_throwback" = "";
-"foryou_myalbums" = "";
-"foryou_myanimations" = "";
-"foryou_collages" = "";
-"foryou_my_collages" = "";
-"foryou_animations" = "";
-"foryou_no_album_warn" = "";
-"foryou_no_photopick_warn" = "";
-"foryou_no_story_warn" = "";
-"foryou_try_photopick" = "";
-"foryou_see_all" = "";
+"foryou_throwback" = "Спогади";
+"foryou_myalbums" = "Мої Альбоми";
+"foryou_myanimations" = "Мої Анімації";
+"foryou_collages" = "Колажі";
+"foryou_my_collages" = "Мої Колажі";
+"foryou_animations" = "Анімації";
+"foryou_no_album_warn" = "Ви ще не створили альбом.";
+"foryou_no_photopick_warn" = "Ви ще не використовували PhotoPick.";
+"foryou_no_story_warn" = "Зараз немає активних історій.";
+"foryou_try_photopick" = "Спробуйте PhotoPick";
+"foryou_see_all" = "Показати все";
 
 /*Facelift*/
-"tabbar_foryou" = "";
-"tabbar_discover" = "";
+"tabbar_foryou" = "Для Вас";
+"tabbar_discover" = "Відкрийте для себе";
 "change_pass_mail_or_phone" = "";
 "mystorage_become_premium" = "";
-"we_are_creating_your_story_title" = "";
-"we_are_creating_your_story_desc" = "";
-"trash_bin" = "";
+"we_are_creating_your_story_title" = "Готуємо Вашу історію.";
+"we_are_creating_your_story_desc" = "Коли буде готово, ви зможете отримати доступ з альбому Відео.";
+"trash_bin" = "Корзина";
 "ksaldalks" = "";
-"empty_gallery_no_photo" = "";
+"empty_gallery_no_photo" = "У вас ще немає фотографій";
 "empty_gallery_no_video" = "";
 "empty_gallery_no_sync" = "";
 "empty_gallery_no_unsync" = "";
