--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2029,28 +2029,28 @@ then {11,99 TRY/Month}*/
 "paycell_share_message" = "M-am alăturat Programului de Ambasador al Mărcii lifebox. Puteți obține un pachet lifebox Premium de 6 luni de 250 GB la un preț redus făcând clic pe linkul de mai jos. Nu rata ocazia 😊";
 "beeline_cancel_TC" = "Vă puteți anula sau gestiona abonamentul lifebox din aplicația Beeline.";
 "paycell_share_message " = "";
-"foryou_throwback" = "";
-"foryou_myalbums" = "";
-"foryou_myanimations" = "";
-"foryou_collages" = "";
-"foryou_my_collages" = "";
-"foryou_animations" = "";
-"foryou_no_album_warn" = "";
-"foryou_no_photopick_warn" = "";
-"foryou_no_story_warn" = "";
-"foryou_try_photopick" = "";
-"foryou_see_all" = "";
+"foryou_throwback" = "Amintirile";
+"foryou_myalbums" = "Albumele Mele";
+"foryou_myanimations" = "Animațiile Mele";
+"foryou_collages" = "Colaje";
+"foryou_my_collages" = "Colajele Mele";
+"foryou_animations" = "Animații";
+"foryou_no_album_warn" = "Nu ai creat încă un album.";
+"foryou_no_photopick_warn" = "Nu ați folosit încă PhotoPick.";
+"foryou_no_story_warn" = "Nu există povești active momentan.";
+"foryou_try_photopick" = "Încercați PhotoPick";
+"foryou_see_all" = "Vezı Toate";
 
 /*Facelift*/
-"tabbar_foryou" = "";
-"tabbar_discover" = "";
+"tabbar_foryou" = "Pentru Voi";
+"tabbar_discover" = "Descoperi";
 "change_pass_mail_or_phone" = "";
 "mystorage_become_premium" = "";
-"we_are_creating_your_story_title" = "";
-"we_are_creating_your_story_desc" = "";
-"trash_bin" = "";
+"we_are_creating_your_story_title" = "Vă pregătim povestea.";
+"we_are_creating_your_story_desc" = "Îl poți găsi în albumul Videoclipuri atunci când este gata.";
+"trash_bin" = "Coș de Gunoi";
 "ksaldalks" = "";
-"empty_gallery_no_photo" = "";
+"empty_gallery_no_photo" = "Nu aveți încă nicio fotografie";
 "empty_gallery_no_video" = "";
 "empty_gallery_no_sync" = "";
 "empty_gallery_no_unsync" = "";
