--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2071,28 +2071,28 @@ then {11,99 TRY/Month}*/
 "paycell_share_message" = "Me uní al Programa de Embajadores de la Marca lifebox. Puede obtener el paquete Premium lifebox de 6 meses y 250 GB específico del programa a un precio con descuento, haciendo clic en el enlace a continuación. No te lo pierdas 😊";
 "beeline_cancel_TC" = "Puedes cancelar o gestionar tu suscripción a lifebox desde la aplicación Beeline.";
 "paycell_share_message " = "";
-"foryou_throwback" = "";
-"foryou_myalbums" = "";
-"foryou_myanimations" = "";
-"foryou_collages" = "";
-"foryou_my_collages" = "";
-"foryou_animations" = "";
-"foryou_no_album_warn" = "";
-"foryou_no_photopick_warn" = "";
-"foryou_no_story_warn" = "";
-"foryou_try_photopick" = "";
-"foryou_see_all" = "";
+"foryou_throwback" = "Memorias";
+"foryou_myalbums" = "Mis Álbumes";
+"foryou_myanimations" = "Mis Animaciones";
+"foryou_collages" = "Collages";
+"foryou_my_collages" = "Mis Collages";
+"foryou_animations" = "Animaciones";
+"foryou_no_album_warn" = "Aún no has creado un álbum.";
+"foryou_no_photopick_warn" = "Aún no has usado PhotoPick.";
+"foryou_no_story_warn" = "No hay historias activas actualmente.";
+"foryou_try_photopick" = "Prueba PhotoPick";
+"foryou_see_all" = "Ver Todo";
 
 /*Facelift*/
-"tabbar_foryou" = "";
-"tabbar_discover" = "";
+"tabbar_foryou" = "Para Ti";
+"tabbar_discover" = "Descubrir";
 "change_pass_mail_or_phone" = "";
 "mystorage_become_premium" = "";
-"we_are_creating_your_story_title" = "";
-"we_are_creating_your_story_desc" = "";
-"trash_bin" = "";
+"we_are_creating_your_story_title" = "Estamos preparando tu historia.";
+"we_are_creating_your_story_desc" = "Una vez hecho esto, puede acceder a él desde el Álbum de Videos.";
+"trash_bin" = "Papelera";
 "ksaldalks" = "";
-"empty_gallery_no_photo" = "";
+"empty_gallery_no_photo" = "Aún no tienes ninguna foto";
 "empty_gallery_no_video" = "";
 "empty_gallery_no_sync" = "";
 "empty_gallery_no_unsync" = "";
