--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2072,28 +2072,28 @@ then {11,99 TRY/Month}*/
 "paycell_share_message" = "Unë iu bashkua Programit të Ambasadorit të Markës lifebox. Mund të merrni një paketë Premium lifebox 6-mujore 250 GB me çmim të reduktuar duke klikuar në lidhjen më poshtë. Mos e humbisni rastin 😊";
 "beeline_cancel_TC" = "Ju mund të anuloni ose menaxhoni abonimin tuaj të lifebox nga aplikacioni Beeline.";
 "paycell_share_message " = "";
-"foryou_throwback" = "";
-"foryou_myalbums" = "";
-"foryou_myanimations" = "";
-"foryou_collages" = "";
-"foryou_my_collages" = "";
-"foryou_animations" = "";
-"foryou_no_album_warn" = "";
-"foryou_no_photopick_warn" = "";
-"foryou_no_story_warn" = "";
-"foryou_try_photopick" = "";
-"foryou_see_all" = "";
+"foryou_throwback" = "Kujtimet e Tua";
+"foryou_myalbums" = "Albumet e Mia";
+"foryou_myanimations" = "Animacionet e Mia";
+"foryou_collages" = "Kolazhet";
+"foryou_my_collages" = "Kolazhet e Mia";
+"foryou_animations" = "Animacionet";
+"foryou_no_album_warn" = "Nuk keni krijuar ende një album.";
+"foryou_no_photopick_warn" = "Nuk e keni përdorur ende PhotoPick.";
+"foryou_no_story_warn" = "Aktualisht, nuk ka histori aktive.";
+"foryou_try_photopick" = "Provoni PhotoPick";
+"foryou_see_all" = "Shıko te Gjıtha";
 
 /*Facelift*/
-"tabbar_foryou" = "";
-"tabbar_discover" = "";
+"tabbar_foryou" = "Per Ty";
+"tabbar_discover" = "Zbuloni";
 "change_pass_mail_or_phone" = "";
 "mystorage_become_premium" = "";
-"we_are_creating_your_story_title" = "";
-"we_are_creating_your_story_desc" = "";
-"trash_bin" = "";
+"we_are_creating_your_story_title" = "Ne po përgatisim historinë tuaj.";
+"we_are_creating_your_story_desc" = "Pasi të ketë mbaruar, mund ta aksesoni atë nga Video Album.";
+"trash_bin" = "Kosh Plehrash";
 "ksaldalks" = "";
-"empty_gallery_no_photo" = "";
+"empty_gallery_no_photo" = "Nuk keni ende asnjë foto";
 "empty_gallery_no_video" = "";
 "empty_gallery_no_sync" = "";
 "empty_gallery_no_unsync" = "";
