--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1460,7 +1460,7 @@
 "ubsent_contacts_in_lifebox" = "lifebox içinde kayıtlı kontak bulunmuyor.";
 "auto_sync_albums_description" = "Otomatik yedeklenmesini istediğin albümlerini seçebilirsin.";
 "tabbar_item_home_label" = "Anasayfa";
-"tabbar_item_gallery_label" = "Galeri";
+"tabbar_item_gallery_label" = "Fotoğraflar";
 "tabbar_item_contacts_label" = "Rehber";
 "tabbar_item_all_files_label" = "Dosyalar";
 "see_features" = "Özellikleri Göster";
