--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2097,3 +2097,4 @@ then {11,99 TRY/Month}*/
 "empty_gallery_no_video" = "";
 "empty_gallery_no_sync" = "";
 "empty_gallery_no_unsync" = "";
+"subscription_offer_cancel_button" = "";
